[package]
name = "musicplayer-continue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rodio = "0.17.1"
serde_json = "1.0.94"
sfml = "0.20.0"
winapi = { version = "0.3.9", features = ["winuser"] }
